# openapi/openapi.yaml
@@ -16,7 +16,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Task'
+                  $ref: '#/components/schemas/RequestBodyTask'
     post:
       summary: Create a new task
       tags:
@@ -27,49 +27,66 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              type: object
+              properties:
+                task:
+                  type: string
+              required:
+                - task
       responses:
         '201':
           description: The created task
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
+                $ref: '#/components/schemas/RequestBodyTask'
+  /tasks/{id}:
     patch:
-      summary: Patch task
-      tags:
-        - tasks
+      summary: Update a task
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
-        description: The task for change
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              type: object
+              properties:
+                task:
+                  type: string
+              required:
+                - task
       responses:
-        '201':
-          description: The task has been changed.
+        '200':
+          description: Task updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
+                $ref: '#/components/schemas/RequestBodyTask'
+
     delete:
-      summary: Delete task
-      tags:
-        - tasks
+      summary: Delete a task
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       responses:
         '204':
           description: Task deleted
 
 components:
   schemas:
-    Task:
+    RequestBodyTask:
       type: object
       properties:
         id:
           type: integer
-          format: uint
+          format: int
         task:
           type: string
-        is_done:
-          type: boolean
